feat:foi desenvolvido o endpoint mocado do pricing
